[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://components/Player/Inventory/InventoryItem.gd" id="1_mwm52"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eteiv"]
size = Vector2(256, 64)

[node name="Background" type="ColorRect"]
custom_minimum_size = Vector2(256, 64)
color = Color(0.278431, 0.278431, 0.278431, 1)
script = ExtResource("1_mwm52")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(128, 32)
shape = SubResource("RectangleShape2D_eteiv")

[node name="Info" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -13.0
offset_right = 91.0
offset_bottom = 13.0
grow_vertical = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_exited"]
